--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="green_light">#CCFBF0</color>
     <color name="green">#F0FDFA</color>
     <color name="red">#B31312</color>
+    <color name="blue">#3652AD</color>
+    <color name="grey">#E7E7FF</color>
 </resources>
